project/stage/tests/reject/reject_no_main.ul
void notMain(){
  int i;
  i = 1;
}